--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,7 @@
     <button mat-icon-button (click)="sidenav.toggle()" matTooltip="Menu">
         <mat-icon>menu</mat-icon>
     </button>
-    <span style="margin-left: 10px;">Danh sách luồng tích hợp</span>
+    <span style="margin-left: 10px;">{{title}}</span>
     <span class="toolbar-item-spacer"></span>
     <img src="assets/logo-cnn.png" alt="Logo">
 </mat-toolbar>
@@ -10,31 +10,15 @@
 <mat-sidenav-container class="app-container">
     <mat-sidenav #sidenav mode="side" [class.mat-elevation-z4]="true" class="app-sidenav">
         <mat-nav-list>
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
+            <mat-expansion-panel [class.mat-elevation-z0]="true" *ngFor="let panel of panels">
                 <mat-expansion-panel-header>
-                    Đơn hàng
+                    <span class="mat-badge">{{panel.title}} ({{panel.links | countPanelLinks}})</span>
                 </mat-expansion-panel-header>
                 <mat-nav-list>
-                    <a mat-list-item routerLink="#">Cập nhật trạng thái đơn hàng</a>
+                    <a mat-list-item *ngFor="let link of panel.links" [routerLink]="link.routerLink">
+                        {{link.name}}
+                    </a>
                 </mat-nav-list>
-            </mat-expansion-panel>
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>
-                    Sản phẩm
-                </mat-expansion-panel-header>
-                <mat-nav-list>
-                    <a mat-list-item routerLink="#">Kích hoạt sản phẩm</a>
-                </mat-nav-list>
-            </mat-expansion-panel>
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>
-                    Chương trình khuyến mãi
-                </mat-expansion-panel-header>
-            </mat-expansion-panel>
-            <mat-expansion-panel [class.mat-elevation-z0]="true">
-                <mat-expansion-panel-header>
-                    Khách hàng
-                </mat-expansion-panel-header>
             </mat-expansion-panel>
         </mat-nav-list>
     </mat-sidenav>
